# mojomark

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/compute/: fibonacci.mojo  matrix_mul.mojo  sorting.mojo
benchmarks/memory/: allocation.mojo  struct_ops.mojo
benchmarks/simd/: dot_product.mojo  mandelbrot.mojo  vector_math.mojo
benchmarks/strings/: concat.mojo  search.mojo
benchmarks/templates/compute/: fibonacci.mojo
benchmarks/templates/io/: file_read.mojo
benchmarks/templates/memory/: allocation.mojo
benchmarks/templates/simd/: explicit_vectorize.mojo  vector_math.mojo
benchmarks/templates/strings/: search.mojo
benchmarks/v0.26/compute/: fibonacci.mojo  matrix_mul.mojo  sorting.mojo
benchmarks/v0.26/memory/: allocation.mojo  struct_ops.mojo
benchmarks/v0.26/simd/: dot_product.mojo  mandelbrot.mojo  vector_math.mojo
benchmarks/v0.26/strings/: concat.mojo  search.mojo
benchmarks/v0.7/compute/: matrix_mul.mojo
benchmarks/v0.7/simd/: vector_math.mojo
benchmarks/v0.7/strings/: concat.mojo
src/mojomark/: __init__.py  cli.py  codegen.py  compare.py  config.py  machine.py  report.py  runner.py  storage.py  trend.py  versions.py
src/mojomark/templates/collections/: dict_ops.mojo
src/mojomark/templates/compute/: matrix_mul.mojo  sorting.mojo
src/mojomark/templates/io/: file_write.mojo
src/mojomark/templates/memory/: struct_ops.mojo
src/mojomark/templates/simd/: dot_product.mojo  explicit_vectorize.mojo  mandelbrot.mojo
src/mojomark/templates/strings/: concat.mojo
tests/: test_cli.py  test_codegen.py  test_compare.py  test_config.py  test_machine.py  test_report.py  test_runner.py  test_storage.py  test_trend.py  test_user_benchmarks.py  test_versions.py
